source/todo-app/app/todo-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
spec:
  type: NodePort
  ports:
  - port: 3001
    targetPort: 3000
    nodePort: 30000
  selector:
    app: todo-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  selector:
    matchLabels:
      app: todo-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
      - image: nitsvutt/todo-app:latest
        name: todo-app
        ports:
        - containerPort: 3000
          name: todo-app
